--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,53 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+header,
+footer {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  background-color: #ddd;
+}
+footer {
+  margin-top: 20px;
+}
+  header > nav > ul > li,
+  footer > nav > ul > li {
+    display:inline-block;
+    margin: 10px;
+    list-style: none;
+    text-decoration: none;
+  }
 section h3 {
   color: #986d64;
   font-size: 24px;
   font-weight: 600;
 }
+
+    header > nav > ul li > a,
+    footer > nav > ul li > a {
+            /*float: left;*/
+            color: #333;
+            font-family: helvetica,arial;
+            text-decoration: none;
+
+}
+
+    .thumbnail{
+    display: block;
+    max-width: 100%;
+    height: 300px;
+}
+    header > nav > ul,
+    footer > nav > ul {
+
+        text-decoration: none;
+        font-family: helvetica, arial;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+
+      h4 {
+        text-align: center;
+      }
